--- a/client/public/index.html
+++ b/client/public/index.html
@@ -39,6 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src = "https://www.paypal.com/sdk/js?client-id=AUMN_-FZ3VhY4JPW7ivicsfW1ZvuMPn7GepG54nR3mTpKeFyTzAV3EHND0fCCtS4uaH8_obmcGgLHhXz"></script>
+    <script src = ""></script>
   </body>
 </html>
